fixed headers in mobile view to not overlap with nav bar

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -156,6 +156,11 @@ select {
 .financ_submit {
   margin: 30px 0 10px 0; }
 
+.financial_header {
+  width: 70%;
+  text-align: center;
+  margin: 0 auto; }
+
 .results_container {
   border: 1px solid gainsboro;
   border-radius: 10px;
@@ -195,6 +200,11 @@ select {
   width: 300px; }
   .results_button_container button {
     margin-bottom: 20px; }
+
+.results_header {
+  width: 70%;
+  text-align: center;
+  margin: 0 auto; }
 
 .addl_comment {
   width: 40%;
