--- a/public/sass/components/_functionalfinancial.scss
+++ b/public/sass/components/_functionalfinancial.scss
@@ -27,3 +27,9 @@
 .financ_submit {
   margin: 30px 0 10px 0;
 }
+
+.financial_header {
+  width: 70%;
+  text-align: center;
+  margin: 0 auto;
+}
